Add remove book button and logic. Add CSS styling for form and book cards

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           <input type="number" name="pages"></div>
         <div class="form-entry">
           <label for="read">Have you read this book?:</label>
-          <input type="radio" id="yes" name="yes">Yes
-          <input type="radio" name="no" id="no">No</div>
+          <input type="radio" id="yes" name="select">Yes
+          <input type="radio" name="select" id="no">No</div>
         <div class="form-entry">
           <input type="submit" value="Submit"></div>
       </form>
