Add modal for new book form and styling. Add toggle read button and event listener

--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
 </head>
 <body>
   <div class="container">
+    <div class="btn-container"><button id='new-book-btn'>NEW BOOK</button></div>
     <div class="form-container">
       <form id="form" action="#">
         <div class="form-entry">
-          <label for="title">Enter Book Title:</label>
-          <input type="text" name="title"></div>
+          <!-- <label for="title">Enter Book Title:</label> -->
+          <input placeholder="Title" type="text" name="title"></div>
         <div class="form-entry">
-          <label for="author">Enter Book Author:</label>
-          <input type="text" name="author"></div>
+          <!-- <label for="author">Enter Book Author:</label> -->
+          <input placeholder="Author" type="text" name="author"></div>
         <div class="form-entry">
-          <label for="pages">Enter Number of Pages:</label>
-          <input type="number" name="pages"></div>
+          <!-- <label for="pages">Enter Pages:</label> -->
+          <input placeholder="Number of Pages" type="number" name="pages"></div>
         <div class="form-entry">
-          <label for="read">Have you read this book?:</label>
+          <label for="read">Book Read?:</label>
           <input type="radio" id="yes" name="select">Yes
           <input type="radio" name="select" id="no">No</div>
         <div class="form-entry">
